# python-exercises

./: .coverage  README.md  main.py  pyproject.toml
src/: compare_numbers.py  even_or_odd.py  vowels.py
tests/: test_compare_numbers.py  test_even_or_odd.py  test_vowels.py
