[project]
name = "python-fundamentals"
version = "0.1.0"
description = "python fundamentals exercises"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.12",
]
